--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "theme_color": "#3579f6",
-  "background_color": "#ffffff",
+  "theme_color": "#01F672",
+  "background_color": "##01F672",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
